--- a/WRST_Caribou3/WRST_Caribou3.vbproj
+++ b/WRST_Caribou3/WRST_Caribou3.vbproj
@@ -148,6 +148,7 @@
     <Import Include="Janus.Windows.GridEX.Internal" />
     <Import Include="Microsoft.SqlServer.Server" />
     <Import Include="Microsoft.VisualBasic" />
+    <Import Include="SkeeterUtilities" />
     <Import Include="System" />
     <Import Include="System.Collections" />
     <Import Include="System.Collections.Generic" />
@@ -189,6 +190,12 @@
       <DependentUpon>CaribouSightingsHistoryForm.vb</DependentUpon>
     </Compile>
     <Compile Include="CaribouSightingsHistoryForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DatasetForm.Designer.vb">
+      <DependentUpon>DatasetForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="DatasetForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DeploymentsForAFrequencyForm.Designer.vb">
@@ -256,6 +263,12 @@
     <Compile Include="SplashScreen.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Switchboard.Designer.vb">
+      <DependentUpon>Switchboard.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Switchboard.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Utilities.vb" />
     <Compile Include="WRST_CaribouDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -281,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CaribouSightingsHistoryForm.resx">
       <DependentUpon>CaribouSightingsHistoryForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DatasetForm.resx">
+      <DependentUpon>DatasetForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DeploymentsForAFrequencyForm.resx">
       <DependentUpon>DeploymentsForAFrequencyForm.vb</DependentUpon>
@@ -312,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SplashScreen.resx">
       <DependentUpon>SplashScreen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Switchboard.resx">
+      <DependentUpon>Switchboard.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
